# apache-airflow-mcp-server

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  fastmcp.json  glama.json  pyproject.toml  server.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  e2e.yml  mcp-registry.yml  publish.yml  security.yml
docs/: RELEASE_PLAN.md
examples/: instances.yaml
scripts/: e2e.sh  security_scan_image.sh
src/airflow_mcp/: AGENTS.md  __init__.py  _version.py  client_factory.py  config.py  errors.py  observability.py  registry.py  server.py  url_utils.py  utils.py  validation.py
src/airflow_mcp/formatting/: __init__.py
src/airflow_mcp/tools/: __init__.py  _common.py  dags.py  datasets.py  instances.py  runs.py  task_logs.py  tasks.py
tests/: CLAUDE.md  test_airflow3_compat.py  test_client_factory.py  test_client_smoke.py  test_error_handling.py  test_imports.py  test_observability.py  test_read_only_mode.py  test_registry.py  test_single_instance_env.py  test_tools_readonly.py  test_tools_write.py  test_url_builder.py  test_url_resolver.py
tests/e2e/: _helpers.py  conftest.py  seed.py  test_auth.py  test_logs.py  test_read_only.py  test_reads.py  test_urls.py  test_writes.py
tests/e2e/dags/: e2e_datasets.py  e2e_failure.py  e2e_noisy_logs.py  e2e_sensor_reschedule.py  e2e_success.py
tests/e2e/docker/: compose.af2.yml  compose.af3.yml
